--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -17,6 +17,7 @@ on:
         options:
           - mainnet
           - optimism
+          - bsc
           - gnosis
           - polygon
           - arbitrum
@@ -130,6 +131,7 @@ jobs:
         network:
           - mainnet
           - optimism
+          - bsc
           - gnosis
           - polygon
           - arbitrum
@@ -164,6 +166,7 @@ jobs:
         network:
           - mainnet
           - optimism
+          - bsc
           - gnosis
           - polygon
           - arbitrum
