--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -21,6 +21,7 @@ on:
           - gnosis
           - polygon
           - arbitrum
+          - avalanche
           - sepolia
         required: true
   schedule:
@@ -135,6 +136,7 @@ jobs:
           - gnosis
           - polygon
           - arbitrum
+          - avalanche
           - sepolia
     timeout-minutes: 90
     env:
@@ -156,24 +158,19 @@ jobs:
           forge test
         env:
           NETWORK_NAME: ${{ matrix.network }}
+      - name: Run Script Fork
+        run: |
+          forge test
+        env:
+          FOUNDRY_PROFILE: script
+          NETWORK_NAME: ${{ matrix.network }}
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
   contracts-script:
-    if: needs.contracts-turbo.outputs.trigger == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'workflow_dispatch'
     needs:
       - contracts-turbo
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        network:
-          - mainnet
-          - optimism
-          - bsc
-          - gnosis
-          - polygon
-          - arbitrum
-          - sepolia
     timeout-minutes: 90
-    env:
-      FOUNDRY_PROFILE: script
     steps:
       - name: Fetch Head
         uses: actions/checkout@v3
@@ -186,19 +183,6 @@ jobs:
       - name: Install Deps
         run: |
           forge install
-      - name: Run Script Test
-        run: |
-          forge test
-        env:
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
-          NETWORK_NAME: ${{ matrix.network }}
-      - if: github.event_name == 'schedule'
-        name: Run Scripts
-        run: |
-          ./scripts/run_script_flow.sh
-        env:
-          NETWORK_NAME: ${{ matrix.network }}
-          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
       - if: github.event_name == 'workflow_dispatch'
         name: Run Scripts
         run: |
