feat: ini retry queue

--- a/crates/consumer/Cargo.toml
+++ b/crates/consumer/Cargo.toml
@@ -9,6 +9,8 @@
   repository.workspace = true
 
 [dependencies]
+  backon = { workspace = true }
+  chrono = { workspace = true }
   clap = { workspace = true, features = ["derive"] }
   ethers = { workspace = true }
   eyre = { workspace = true }
