fix: contracts gha

--- a/.github/workflows/contracts.yml
+++ b/.github/workflows/contracts.yml
@@ -19,7 +19,7 @@ on:
           - optimism
           - bsc
           - gnosis
-          - polygon
+          # - polygon
           - arbitrum
           - avalanche
           - sepolia
@@ -123,7 +123,7 @@ jobs:
           files: lcov.info
           flags: contracts
   contracts-fork:
-    if: needs.contracts-turbo.outputs.trigger == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    if: needs.contracts-turbo.outputs.trigger == 'true' || github.event_name == 'schedule'
     needs:
       - contracts-turbo
     runs-on: ubuntu-latest
@@ -134,7 +134,7 @@ jobs:
           - optimism
           - bsc
           - gnosis
-          - polygon
+          # - polygon
           - arbitrum
           - avalanche
           - sepolia
