--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,6 +96,7 @@
   prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.8", features = [
     "mocking",
   ] }
+  rand = "0.8.5"
   rdkafka = { version = "0.33.2", features = ["sasl", "ssl"] }
   redb = "1.0.5"
   reqwest = "0.11.20"
