--- a/crates/notifier/Cargo.toml
+++ b/crates/notifier/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-  name = "lightdotso-consumer"
+  name = "lightdotso-notifier"
 
   version.workspace = true
   edition.workspace = true
@@ -10,14 +10,8 @@
 
 [dependencies]
   backon = { workspace = true }
-  chrono = { workspace = true }
   clap = { workspace = true, features = ["derive"] }
-  ethers = { workspace = true }
   eyre = { workspace = true }
-  lightdotso-db = { workspace = true }
-  lightdotso-indexer = { workspace = true }
-  lightdotso-kafka = { workspace = true }
-  lightdotso-notifier = { workspace = true }
+  lightdotso-discord = { workspace = true }
   lightdotso-tracing = { workspace = true }
-  rdkafka = { workspace = true }
   serde_json = { workspace = true }
