--- a/fly/consumer-tx/fly.toml
+++ b/fly/consumer-tx/fly.toml
@@ -19,9 +19,9 @@ kill_timeout = "5s"
 
 [http_service]
   internal_port = 0
-  auto_stop_machines = true
+  auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 16
+  min_machines_running = 24
 
 [checks]
   [checks.health]
