--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -102,7 +102,7 @@ jobs:
         uses: superfly/flyctl-actions/setup-flyctl@master
       - name: Fly Deploy
         run: flyctl deploy --remote-only
-        working-directory: ./fly/retry
+        working-directory: ./fly/consumer-retry
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-consumer-tx:
