--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -90,6 +90,21 @@ jobs:
         working-directory: ./fly/consumer-error
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  fly-deploy-consumer-nfn:
+    runs-on: ubuntu-latest
+    needs:
+      - fly-wait-docker
+    timeout-minutes: 30
+    steps:
+      - name: Fetch Head
+        uses: actions/checkout@v4
+      - name: Fly Install
+        uses: superfly/flyctl-actions/setup-flyctl@master
+      - name: Fly Deploy
+        run: flyctl deploy --remote-only
+        working-directory: ./fly/consumer-nfn
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   fly-deploy-consumer-retry:
     runs-on: ubuntu-latest
     needs:
@@ -399,6 +414,7 @@ jobs:
       - fly-deploy-bundler-sepolia
       - fly-deploy-consumer
       - fly-deploy-consumer-error
+      - fly-deploy-consumer-nfn
       - fly-deploy-consumer-retry
       - fly-deploy-consumer-tx
       - fly-deploy-gas
@@ -425,5 +441,5 @@ jobs:
       - name: Check All Green
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: fly-wait-docker,fly-deploy-bundler,fly-deploy-bundler-sepolia,fly-deploy-consumer,fly-deploy-consumer-error,fly-deploy-consumer-retry,fly-deploy-consumer-tx,fly-deploy-gas,fly-deploy-grafana,fly-deploy-indexer,fly-deploy-indexer-arbitrum,fly-deploy-indexer-avalanche,fly-deploy-indexer-base,fly-deploy-indexer-bsc,fly-deploy-indexer-gnosis,fly-deploy-indexer-polygon,fly-deploy-indexer-optimism,fly-deploy-indexer-sepolia,fly-deploy-log-shipper,fly-deploy-otel-collector,fly-deploy-paymaster,fly-deploy-prometheus,fly-deploy-rpc,fly-deploy-rpc-internal,fly-deploy-simulator
+          allowed-skips: fly-wait-docker,fly-deploy-bundler,fly-deploy-bundler-sepolia,fly-deploy-consumer,fly-deploy-consumer-error,fly-deploy-consumer-nfn,fly-deploy-consumer-retry,fly-deploy-consumer-tx,fly-deploy-gas,fly-deploy-grafana,fly-deploy-indexer,fly-deploy-indexer-arbitrum,fly-deploy-indexer-avalanche,fly-deploy-indexer-base,fly-deploy-indexer-bsc,fly-deploy-indexer-gnosis,fly-deploy-indexer-polygon,fly-deploy-indexer-optimism,fly-deploy-indexer-sepolia,fly-deploy-log-shipper,fly-deploy-otel-collector,fly-deploy-paymaster,fly-deploy-prometheus,fly-deploy-rpc,fly-deploy-rpc-internal,fly-deploy-simulator
           jobs: ${{ toJSON(needs) }}
