--- a/bin/Cargo.toml
+++ b/bin/Cargo.toml
@@ -35,6 +35,7 @@
   lightdotso-kafka = { workspace = true }
   lightdotso-paymaster = { workspace = true }
   lightdotso-prisma = { workspace = true }
+  lightdotso-prometheus = { workspace = true }
   lightdotso-rpc = { workspace = true }
   lightdotso-simulator = { workspace = true }
   lightdotso-tracing = { workspace = true }
