--- a/fly/consumer-nfn/fly.toml
+++ b/fly/consumer-nfn/fly.toml
@@ -15,7 +15,7 @@ kill_timeout = "5s"
   image = "ghcr.io/lightdotso/lightdotso:latest"
 
 [deploy]
-  strategy = "bluegreen"
+  strategy = "canary"
 
 [http_service]
   internal_port = 0
