fix: exporter bug

--- a/crates/prometheus/Cargo.toml
+++ b/crates/prometheus/Cargo.toml
@@ -10,6 +10,7 @@
 
 [dependencies]
   axum = { workspace = true }
+  chrono = { workspace = true }
   once_cell = { workspace = true }
   prometheus = { workspace = true }
   reqwest = { workspace = true }
