--- a/crates/tracing/Cargo.toml
+++ b/crates/tracing/Cargo.toml
@@ -10,6 +10,7 @@
 
 [dependencies]
   base64 = { workspace = true }
+  dotenvy = { workspace = true }
   eyre = { workspace = true }
   lazy_static = { workspace = true }
   metrics = "0.21.1"
@@ -20,8 +21,8 @@
     "tls-roots",
   ] }
   opentelemetry_sdk = "0.19.0"
-  pyroscope = "0.5.6"
-  pyroscope_pprofrs = "0.2.5"
+  pyroscope = "0.5.7"
+  pyroscope_pprofrs = "0.2.7"
   tokio = { workspace = true }
   tonic = { workspace = true }
   tracing = "0.1.37"
