--- a/crates/tracing/Cargo.toml
+++ b/crates/tracing/Cargo.toml
@@ -18,6 +18,7 @@
   opentelemetry-otlp = { version = "0.12.0", features = [
     "grpc-tonic",
     "reqwest-client",
+    "tls",
     "tls-roots",
   ] }
   opentelemetry_sdk = "0.19.0"
