--- a/crates/tracing/Cargo.toml
+++ b/crates/tracing/Cargo.toml
@@ -14,23 +14,24 @@
   eyre = { workspace = true }
   lazy_static = { workspace = true }
   metrics = "0.21.1"
-  opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
-  opentelemetry-otlp = { version = "0.12.0", features = [
+  opentelemetry = { version = "0.20.0", features = ["rt-tokio"] }
+  opentelemetry-otlp = { version = "0.13.0", features = [
     "grpc-tonic",
     "reqwest-client",
     "tls",
     "tls-roots",
   ] }
-  opentelemetry_sdk = "0.19.0"
+  opentelemetry_sdk = "0.20.0"
   pyroscope = "0.5.7"
   pyroscope_pprofrs = "0.2.7"
   tokio = { workspace = true }
   tonic = { workspace = true }
+  tonic_0_9 = { version = "0.9.0", features = ["tls"], package = "tonic" }
   tracing = "0.1.37"
   tracing-appender = "0.2.2"
   tracing-futures = "0.2.5"
   tracing-loki = { version = "0.2.2", features = ["rustls", "native-tls"] }
-  tracing-opentelemetry = "0.19.0"
+  tracing-opentelemetry = "0.21.0"
   tracing-subscriber = { version = "0.3.17", features = [
     "ansi",
     "env-filter",
