chore: ini expand env

--- a/fly/tempo/Dockerfile
+++ b/fly/tempo/Dockerfile
@@ -17,4 +17,4 @@ FROM grafana/tempo:1.5.0
 
 COPY ./tempo-config.yaml /etc/tempo.yaml
 
-CMD ["/tempo", "-config.file=/etc/tempo.yaml"]
+CMD ["/tempo", "-config.file=/etc/tempo.yaml", "--config.expand-env=true"]
