--- a/fly/tempo/fly.toml
+++ b/fly/tempo/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for lightdotso-log-shipper on 2023-08-04T00:37:17-07:00
+# fly.toml app configuration file generated for lightdotso-tempo on 2023-09-08T01:44:35-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
