--- a/fly/loki/fly.toml
+++ b/fly/loki/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for lightdotso-loki on 2023-08-04T00:37:17-07:00
+# fly.toml app configuration file generated for lightdotso-loki on 2023-09-08T02:35:43-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -8,3 +8,14 @@ primary_region = "sjc"
 
 [build]
   dockerfile = "./Dockerfile"
+
+[http_service]
+  internal_port = 3200
+  force_https = true
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 1
+  [http_service.concurrency]
+    type = "requests"
+    hard_limit = 250
+    soft_limit = 200
