--- a/fly/loki/loki-config.yaml
+++ b/fly/loki/loki-config.yaml
@@ -34,38 +34,25 @@ common:
     kvstore:
       store: inmemory
 
-# schema_config:
-#   configs:
-#     - from: 2020-05-15
-#       store: boltdb-shipper
-#       object_store: filesystem
-#       schema: v11
-#       index:
-#         prefix: index_
-#         period: 24h
-schema_config:
+chema_config:
   configs:
-    - from: 2020-05-15
-      store: aws
-      object_store: s3
+    - from: 2020-07-01
+      store: boltdb-shipper
+      object_store: aws
       schema: v11
       index:
-        prefix: loki_
+        prefix: index_
+        period: 24h
 
 storage_config:
+  boltdb_shipper:
+    active_index_directory: /loki/boltdb-shipper-active
+    cache_location: /loki/boltdb-shipper-cache
+    cache_ttl: 24h # Can be increased for faster performance over longer query periods, uses more disk space
+    shared_store: s3
   aws:
-    bucketnames: bucket_name1, bucket_name2
-    endpoint: s3.endpoint.com
-    region: s3_region
-    access_key_id: s3_access_key_id
-    secret_access_key: s3_secret_access_key
-    insecure: false
-    sse_encryption: false
-    http_config:
-      idle_conn_timeout: 90s
-      response_header_timeout: 0s
-      insecure_skip_verify: false
-    s3forcepathstyle: true
+    s3: ${S3_ACCESS_STRING}
+    bucketnames: lightdotso-loki
   configs:
     - from: 2023-05-15
       store: boltdb-shipper
