--- a/fly/loki/loki-config.yaml
+++ b/fly/loki/loki-config.yaml
@@ -34,7 +34,7 @@ common:
     kvstore:
       store: inmemory
 
-chema_config:
+schema_config:
   configs:
     - from: 2020-07-01
       store: boltdb-shipper
