--- a/fly/loki/loki-config.yaml
+++ b/fly/loki/loki-config.yaml
@@ -56,3 +56,21 @@ query_range:
       embedded_cache:
         enabled: true
         max_size_mb: 100
+
+limits_config:
+  retention_period: 72h
+  enforce_metric_name: false
+  reject_old_samples: true
+  reject_old_samples_max_age: 168h
+  max_cache_freshness_per_query: 10m
+  split_queries_by_interval: 15m
+  # for big logs tune
+  per_stream_rate_limit: 512M
+  per_stream_rate_limit_burst: 1024M
+  cardinality_limit: 200000
+  ingestion_burst_size_mb: 1000
+  ingestion_rate_mb: 10000
+  max_entries_limit_per_query: 1000000
+  max_label_value_length: 20480
+  max_label_name_length: 10240
+  max_label_names_per_series: 300
