--- a/fly/loki/fly.toml
+++ b/fly/loki/fly.toml
@@ -14,8 +14,12 @@ primary_region = "sjc"
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
-  min_machines_running = 1
+  min_machines_running = 3
   [http_service.concurrency]
     type = "requests"
     hard_limit = 250
     soft_limit = 200
+
+[[mounts]]
+  source = "loki_storage"
+  destination = "/loki"
