--- a/fly/loki/fly.toml
+++ b/fly/loki/fly.toml
@@ -12,9 +12,9 @@ primary_region = "sjc"
 [http_service]
   internal_port = 3100
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 3
+  min_machines_running = 1
   [http_service.concurrency]
     type = "requests"
     hard_limit = 250
