--- a/fly/tempo/fly.toml
+++ b/fly/tempo/fly.toml
@@ -27,3 +27,7 @@ primary_region = "sjc"
     grace_period = "30s"
     method = "get"
     path = "/ready"
+
+[metrics]
+  port = 3200
+  path = "/metrics"
